# anki-aid

./: .gitignore  README.md  cz_search.py  czsearch  pyproject.toml  requirements.txt
anki/: copy_to_anki.py
audiocz/: cli.py  copy_to_anki.py  forvo.py  forvo_class.py  normalize_audio.py  shtooka.py  wordlist.py
audiocz/tests/: test-cli.py  test-copy_to_anki.py
data/: wordlist.txt
forvo/: forvo.py  test-forvo.py
shtooka/: shtooka.py  test-shtooka.py
